Set full alignemnt as default for covers Add 'full height' style for cover Fix issues with responsive modes and 'text overlaying image'

--- a/style-common.css
+++ b/style-common.css
@@ -107,6 +107,12 @@ img {
 		height: 100%;
 	}
 
+/*  Cover  */
+
+#content .wp-block-cover.is-style-full-height {
+	height: 100vh;
+}
+
 /*  Group  */
 
 .wp-block-group {
@@ -176,26 +182,45 @@ img {
 	}
 }
 
-/*  Text overlaying image  */
+	/*  Block style: Text overlaying image  */
+	.wp-block-media-text.is-style-text-overlaying-image {
+		display: block;
+		position: relative;
+	}
+		.wp-block-media-text.is-style-text-overlaying-image figure,
+		.wp-block-media-text.is-style-text-overlaying-image .wp-block-media-text__content {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
 
-.wp-block-media-text.is-style-text-overlaying-image figure {
-	grid-column: 1 !important;
-	width: 200%;
+		.wp-block-media-text.is-style-text-overlaying-image figure {
+			grid-column: 1 !important;
+			width: 200%;
+		}
+		.wp-block-media-text.is-style-text-overlaying-image .wp-block-media-text__content {
+			color: #fff;
+			position: relative;
+			z-index: 2;
+		}
+
+@media screen and (min-width:768px) {
+	.wp-block-media-text.is-style-text-overlaying-image {
+		display: grid;
+	}
+		.wp-block-media-text.is-style-text-overlaying-image figure,
+		.wp-block-media-text.is-style-text-overlaying-image .wp-block-media-text__content {
+			position: relative;
+		}
 }
 
-.wp-block-media-text.is-style-text-overlaying-image .wp-block-media-text__content {
-	color: #fff;
-	position: relative;
-	z-index: 2;
-}
-
-/*
- *  Additional classes for Gutenberg blocks
- *
- */
-
-#content .wp-block-cover.is-full-height {
-	height: 100vh;
+@media screen and (min-width:1024px) {
+	.wp-block-media-text.is-style-text-overlaying-image .wp-block-media-text__content {
+		width: 100%;
+		max-width: 570px;
+		margin-right: 30px;
+		margin-left: 0;
+	}
 }
 
 /*
