--- a/style-gutenberg.css
+++ b/style-gutenberg.css
@@ -25,7 +25,8 @@
 	.editor-styles-wrapper h1 { font-size: 4em !important; }
 	.editor-styles-wrapper h2 { font-size: 1.5em !important; }
 
-.editor-styles-wrapper .wp-block > .block-editor-block-list__block {
+.editor-styles-wrapper .is-root-container > .wp-block,
+.editor-styles-wrapper .is-root-container > .wp-block > .block-editor-block-list__block {
 	margin-top: 0;
 	margin-bottom: 0;
 }
@@ -42,6 +43,16 @@ h1.wp-block {
 .editor-styles-wrapper .wp-block-column > .wp-block {
 	height: 100%;
 }
+
+/*  Cover  */
+
+	/*  Block style: Full height  */
+
+	.editor-styles-wrapper .wp-block-cover.is-style-full-height {
+		height: 100vh;
+	}
+
+/*  Media & Text  */
 
 .editor-styles-wrapper .wp-block-media-text figure {
 	position: relative !important;
